objects/copado__Data_Template__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Attachment_Options__c</fullName>
        <inlineHelpText>Insert, update or remove attachments of the records that will get deployed.</inlineHelpText>
        <label>Attachment Actions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Attachments</fullName>
                    <default>true</default>
                    <label>No Actions</label>
                </value>
                <value>
                    <fullName>Insert Attachments</fullName>
                </value>
                <value>
                    <fullName>Replace Attachments</fullName>
                </value>
                <value>
                    <fullName>Remove Attachments</fullName>
                </value>
                <value>
                    <fullName>Upsert Attachments</fullName>
                    <isActive>false</isActive>
                    <label>Upsert Attachments</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Continue_on_Error__c</fullName>
        <label>Continue on Error</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continue deployment until blocker issue</fullName>
                    <default>true</default>
                    <label>Continue deployment until blocker issue</label>
                </value>
                <value>
                    <fullName>Stop deployment on first issue</fullName>
                    <isActive>false</isActive>
                    <label>Stop deployment on first issue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Filter_Logic__c</fullName>
        <defaultValue>TEXT(1)</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Main_Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Main Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Match_Owners__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When not matching owners, the owner of the deployed records in the target Credential will be automatically assigned to the user executing the deployment.</inlineHelpText>
        <label>Match Owners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Match_Record_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When matching record types, the records in the target Credential are assigned to the same record type as in the source Credential, if found. Otherwise they are assigned to the default record type in the deploying user&apos;s profile.</inlineHelpText>
        <label>Match Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Max_Record_Limit__c</fullName>
        <label>Max. Record Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Template_Source_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The main objects, fields and related objects will be listed based on the Salesforce Org data model of the selected credential. The Salesforce user linked to the credential must have access to all the fields and objects necessary for your deployments.</inlineHelpText>
        <label>Template Schema Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Data Templates</relationshipLabel>
        <relationshipName>Data_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Template</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Active__c</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Template_Source_Org__c</columns>
        <columns>copado__Max_Record_Limit__c</columns>
        <columns>copado__Batch_Size__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>